# Creator

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt
code/2ndYear/: Agent.h  Animation.cpp  Animation.h  Application.cpp  Application.h  BRDF.cpp  BRDF.h  BaseScene.cpp  BaseScene.h  Behaviour.h  BehaviourTree.cpp  BehaviourTree.h  CMakeLists.txt  Compilation.cpp  Compilation.h  DIYPhysicScene.cpp  DIYPhysicScene.h  DIYPhysicsEngine.cpp  DIYPhysicsEngine.h  DeferredRendering.cpp  DeferredRendering.h  FBXFile.cpp  FBXFile.h  FBXManager.cpp  FBXManager.h  FBXSceneResource.cpp  FBXSceneResource.h  FBX_Tutorial.cpp  FBX_Tutorial.h  Fuzzy Logic.cpp  Fuzzy Logic.h  FuzzyLogicEngine.cpp  FuzzyLogicEngine.h  GA.cpp  GA.h  GPUParticleEmitter.cpp  GPUbasedParticleSystems.cpp  GPUbasedParticleSystems.h  Gizmos.cpp  Gizmos.h  (+91 more)
code/ai for games/: CMakeLists.txt  Edge.cpp  Edge.h  Game1.cpp  Game1.h  Graph.cpp  Graph.h  IEntity.h  Node.cpp  Node.h  Player.cpp  Player.h  main.cpp
code/aie gl/: Application.cpp  Application.h  CMakeLists.txt  Font.cpp  Font.h  Input.cpp  Input.h  RenderTexture.cpp  RenderTexture.h  SpriteBatch.cpp  SpriteBatch.h  SpriteBatch_GL3.cpp  SpriteBatch_GL3.h  Texture.cpp  Texture.h  lodepng.cpp
code/angine/: BaseCamera.cpp  BaseCamera.h  BaseScene.cpp  BaseScene.h  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  DynamicArray.h  File.cpp  File.h  FlyCamera3D.cpp  FlyCamera3D.h  Game.cpp  Game.h  Gizmos.cpp  Gizmos.h  InputHandler.cpp  InputHandler.h  List.cpp  List.h  ListNode.cpp  ListNode.h  Mesh.cpp  Mesh.h  Object.cpp  Quad.h  (+28 more)
(+260 files in other folders)
