cmake_minimum_required(VERSION 3.11)
link_directories("external/SDL2/lib/x64/")
link_directories("external/glfw3/lib/")
link_directories("external/glew/lib/Release/x64/")
link_directories("external/soil/lib/")
project(Creator)
add_executable(Creator "")
add_subdirectory(code)
add_subdirectory(external)
target_link_libraries(Creator "SDL2")
target_link_libraries(Creator "glfw3")
target_link_libraries(Creator "glew32s")
target_link_libraries(Creator "soil")
add_definitions(-DGLM_SWIZZLE)