cmake_minimum_required(VERSION 3.11)
target_sources(Creator PRIVATE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)
add_subdirectory("math")
add_subdirectory("opengl framework")
add_subdirectory("intro to opengl")
add_subdirectory("intro to cpp")
add_subdirectory("game engine")
add_subdirectory("design patterns")
add_subdirectory("angine")
add_subdirectory("aie gl")
add_subdirectory("ai for games")
add_subdirectory("2ndYear")
target_include_directories(Creator PUBLIC "math")
target_include_directories(Creator PUBLIC "opengl framework")
target_include_directories(Creator PUBLIC "intro to opengl")
target_include_directories(Creator PUBLIC "intro to cpp")
target_include_directories(Creator PUBLIC "game engine")
target_include_directories(Creator PUBLIC "design patterns")
target_include_directories(Creator PUBLIC "angine")
target_include_directories(Creator PUBLIC "aie gl")
target_include_directories(Creator PUBLIC "ai for games")
target_include_directories(Creator PUBLIC "2ndYear")
